Updated Stream Box

--- a/live.html
+++ b/live.html
@@ -1,6 +1,58 @@
 <html>
-	<style>
+	<style>	
+/* Text Fade In */	
+.fade-in {
+  animation: fadeIn ease 10s;
+  -webkit-animation: fadeIn ease 10s;
+  -moz-animation: fadeIn ease 10s;
+  -o-animation: fadeIn ease 10s;
+  -ms-animation: fadeIn ease 10s;
+}
+@keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-moz-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-webkit-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-o-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+  }
+}
+
+@-ms-keyframes fadeIn {
+  0% {
+    opacity:0;
+  }
+  100% {
+    opacity:1;
+}
 	
+/* Video Style */
 .video {
 	aspect-ratio: 16 / 9;
 	max-width: 100%;
@@ -37,6 +89,7 @@
 <body>
 <p align="center"><iframe class="video" title="Mobile Games Streaming" src="https://video.hardlimit.com/videos/embed/ab69b48f-6f94-4ca6-ac0a-541bc9a7403a" width="560" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" frameborder="0"></iframe></p>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 50px;color: rgb(64,64,64);">THIS IS A TEST</div>
 <!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
@@ -50,5 +103,4 @@
 				</ul>
 			</footer>
 </body>
-</html>
 </html>
