--- a/live.html
+++ b/live.html
@@ -7,6 +7,7 @@
   -moz-animation: fadeIn ease 10s;
   -o-animation: fadeIn ease 10s;
   -ms-animation: fadeIn ease 10s;
+  max-width: 100%;
 }
 @keyframes fadeIn {
   0% {
