--- a/live.html
+++ b/live.html
@@ -1,13 +1,17 @@
 <html>
-	<style>	
-/* Text Fade In */	
+	<style>
+.video {
+	aspect-ratio: 16 / 9;
+	max-width: 100%;
+	height: auto;
+}	
+
 .fade-in {
   animation: fadeIn ease 10s;
   -webkit-animation: fadeIn ease 10s;
   -moz-animation: fadeIn ease 10s;
   -o-animation: fadeIn ease 10s;
   -ms-animation: fadeIn ease 10s;
-  max-width: 100%;
 }
 @keyframes fadeIn {
   0% {
@@ -52,13 +56,6 @@
   100% {
     opacity:1;
 }
-	
-/* Video Style */
-.video {
-	aspect-ratio: 16 / 9;
-	max-width: 100%;
-	height: auto;
-}	
 </style>
 	<head>
 		<title>Small Screen Live</title>
@@ -90,13 +87,14 @@
 <body>
 <p align="center"><iframe class="video" title="Mobile Games Streaming" src="https://video.hardlimit.com/videos/embed/ab69b48f-6f94-4ca6-ac0a-541bc9a7403a" width="560" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" frameborder="0"></iframe></p>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">THIS IS A TEST</div>
 <!-- Footer -->
 			<footer id="footer">
 				<ul class="icons">
 					<li><a rel="me" href="https://elekk.xyz/@campbell" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
-					<li> <a href="https://smallscreen.info/live" class="icon solid fa-video"><span class="label">Live Stream</span></a></li>
+					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
 					<li><a href="https://ko-fi.com/campbellbird" class="icon solid fa-mug-hot"><span class="label">Ko-Fi</span></a></li>
+					<li><a href="https://github.com/smallscreened" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
 					<li><a href=mailto:campbell@smallscreen.info class="icon fa-envelope"><span class="label">Email</span></a></li>
 				</ul>
 				<ul class="copyright">
