--- a/live.html
+++ b/live.html
@@ -87,9 +87,10 @@
 <body>
 <p align="center"><iframe class="video" title="Mobile Games Streaming" src="https://video.hardlimit.com/videos/embed/ab69b48f-6f94-4ca6-ac0a-541bc9a7403a" width="560" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" frameborder="0"></iframe></p>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">THIS IS A TEST</div>
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">THIS IS ONLY A TEST<p style="font-size:14px;color: rgb(64,64,64);"></div>
+<p align="center">Game listed may change suddenly depending on my whims.<br><br><br></p>
 <!-- Footer -->
-			<footer id="footer">
+			<footer id="footer" style="position:relative;">
 				<ul class="icons">
 					<li><a rel="me" href="https://elekk.xyz/@campbell" class="icon brands fa-mastodon"><span class="label">Mastodon</span></a></li>
 					<li><a href="https://twitter.com/smallscreened" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
