--- a/music/index.html
+++ b/music/index.html
@@ -2,7 +2,7 @@
 		<title>Music</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="..assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main-2.css" />
 	</head>	
 <h3>Music</h3>
 <p>I am not sure what to put here, but I want to do *something* about storing music thoughts, recommendations, etc. somewhere, and this is a place I *could* do it.
