--- a/live.html
+++ b/live.html
@@ -87,7 +87,7 @@
 <body>
 <p align="center"><iframe class="video" title="Mobile Games Streaming" src="https://video.hardlimit.com/videos/embed/ab69b48f-6f94-4ca6-ac0a-541bc9a7403a" width="560" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" frameborder="0"></iframe></p>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">THE KID SAYS "GRAMPIRE" INSTEAD OF VAMPIRE SO I'M GONNA GO PLAY SOME GRAMPIRE SURVIVORS<p style="font-size:14px;color: rgb(64,64,64);">Now Playing: Vampire Survivors</div>
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">WE HAVE REACHED THE TIME OF THE YEAR WHERE WORK DAMAGES MY HANDS<p style="font-size:14px;color: rgb(64,64,64);">Now Playing: Vampire Survivors</div>
 <p align="center">Game listed may change suddenly depending on my whims.<br><br><br></p>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
