updated what I'm playing

--- a/playing-archive-01-20-23.html
+++ b/playing-archive-01-20-23.html
@@ -150,18 +150,17 @@ body {
 <!-- Header -->
 <div class="header"><div class="back-button"><ul class="icons">
 	<li><a href="https://smallscreened.github.io" class="icon solid fa-arrow-left"><span class="label">Back</span></a></li></ul></div></br>
-	<h4>Now Playing</br>(Updated Jan 20, 2023)</h4>
+	<h4>Now Playing</br>(Updated Dec 12, 2022)</h4>
 </div>
 
 <!-- Photo Grid -->
-<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/ufo99/id1549816260?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple122/v4/3d/36/db/3d36dbf5-bfa6-6060-e5b7-cddd5607a239/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>UFO99</a></br>Free</br>I Chen Sheng</div>
-<div class="column"><a href="https://apps.apple.com/us/app/goose-goose-duck/id1558248707?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple113/v4/f9/d2/fb/f9d2fbc5-7e88-3933-dc2e-6ff44a0ff2d0/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Goose Goose Duck</a></br>Free</br>Gaggle Studios, Inc.</div>
-<div class="column"><a href="https://apps.apple.com/us/app/wavecade/id1661057707?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple123/v4/dc/62/d6/dc62d6a0-015d-fca6-95a8-9db8323c71b4/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Wavecade</a></br>$1.99</br>Andrew Spalato</div>
-<div class="column"><a href="https://apps.apple.com/us/app/roller-drama/id1542324410?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple123/v4/a9/94/40/a99440af-d7d6-e564-c613-5d3588dabdbb/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Roller Drama</a></br></br>Open Lab Srl</div>
-<div class="column"><a href="https://apps.apple.com/us/app/omega-13/id6443956951?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple123/v4/1a/0d/c9/1a0dc914-7664-a155-b896-38e28ded008b/AppIcon-0-0-1x_U007emarketing-0-0-0-10-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Omega 13</a></br>$4.99</br>Game Stew</div>
-<div class="column"><a href="https://apps.apple.com/us/app/haak/id1336793944?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple122/v4/cb/c8/1c/cbc81c1b-eb02-0802-2065-6b240c81ee19/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>HAAK</a></br>$6.99</br>ZhiXiong Huang</div>
-<div class="column"><a href="https://apps.apple.com/us/app/dungeon-of-the-endless-apogee/id1526466468?uo=4"><img src="https://is4-ssl.mzstatic.com/image/thumb/Purple114/v4/e4/3d/f8/e43df895-dc78-e269-7929-818d251b1506/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Dungeon of the Endless: Apogee</a></br>$7.99</br>Playdigious</div>
+<div class="row"><div class="column"><a href="https://apps.apple.com/us/app/dungeon-of-the-endless-apogee/id1526466468?uo=4"><img src="https://is4-ssl.mzstatic.com/image/thumb/Purple114/v4/e4/3d/f8/e43df895-dc78-e269-7929-818d251b1506/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Dungeon of the Endless: Apogee</a></br>$7.99</br>Playdigious</div>
+<div class="column"><a href="https://apps.apple.com/us/app/vampire-survivors/id6444525702?uo=4"><img src="https://is4-ssl.mzstatic.com/image/thumb/Purple122/v4/df/d4/07/dfd4073a-bbd2-ad28-4a64-835a5c166e04/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Vampire Survivors</a></br>Free</br>Poncle</div>
+<div class="column"><a href="https://apps.apple.com/us/app/afterplace/id1539778232?uo=4"><img src="https://is1-ssl.mzstatic.com/image/thumb/Purple122/v4/d9/cd/63/d9cd63d8-057c-f17c-e894-d77d88b09935/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Afterplace</a></br>$6.99</br>Evan Kice</div>
+<div class="column"><a href="https://apps.apple.com/us/app/finding-paradise/id1619867109?uo=4"><img src="https://is2-ssl.mzstatic.com/image/thumb/Purple122/v4/ed/ba/b6/edbab664-3089-d0af-d60b-7e985a162664/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Finding Paradise</a></br>$3.99</br>X.D. Network Inc.</div>
 <div class="column"><a href="https://apps.apple.com/us/app/motorsport-manager-mobile-3/id1346580540?uo=4"><img src="https://is4-ssl.mzstatic.com/image/thumb/Purple122/v4/75/cb/42/75cb4290-ba65-270a-f3b2-beeb83b7fb96/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>Motorsport Manager Mobile 3</a></br>$5.99</br>Playsport Games Ltd</div>
+<div class="column"><a href="https://apps.apple.com/us/app/opus-echo-of-starsong/id1604771334?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple122/v4/e1/68/1b/e1681b22-1e6f-6683-6bfe-d6a86d490970/AppIcon-0-0-1x_U007emarketing-0-0-0-7-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>OPUS: Echo of Starsong</a></br></br>SIGONO INC.</div>
+<div class="column"><a href="https://apps.apple.com/us/app/dysmantle/id1403738209?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple122/v4/9e/da/1e/9eda1e5b-249b-ae9c-a61d-a3b143187e89/AppIcon-0-0-1x_U007emarketing-0-0-0-4-0-0-sRGB-0-0-0-GLES2_U002c0-512MB-85-220-0-0.png/512x512bb.png"></p><p>DYSMANTLE</a></br>$9.99</br>10tons Ltd</div>
 <div class="column"><a href="https://apps.apple.com/us/app/monster-train/id1577392165?uo=4"><img src="https://is5-ssl.mzstatic.com/image/thumb/Purple112/v4/97/ab/da/97abda90-89e9-4c4f-f934-ad7140b388b4/AppIcon-1x_U007emarketing-0-7-0-85-220.png/512x512bb.png"></p><p>Monster Train</a></br>$9.99</br>Good Shepherd Entertainment</div>
 <div class="column"><a href="https://apps.apple.com/us/app/genshin-impact/id1517783697?uo=4"><img src="https://is3-ssl.mzstatic.com/image/thumb/Purple112/v4/37/08/4d/37084d81-091e-a0d6-c34d-55f830214522/AppIcon-1x_U007emarketing-0-7-0-0-85-220.png/512x512bb.png"></p><p>Genshin Impact</a></br>Free</br>COGNOSPHERE PTE. LTD.</div>
 
@@ -176,7 +175,7 @@ body {
 				<ul class="copyright">
 					<li>&copy; namestolen.</li><li>Credits: <a href="http://html5up.net">HTML5 UP</a>, <a href="https://tinyletter.com">Tiny Letter</a></li>
 				</ul>
-			</footer> </div>
+			</footer></div>
 
 		<!-- Scripts -->
 			<script src="assets/js/main.js"></script>
