--- a/live.html
+++ b/live.html
@@ -87,7 +87,7 @@
 <body>
 <p align="center"><iframe class="video" title="Mobile Games Streaming" src="https://video.hardlimit.com/videos/embed/ab69b48f-6f94-4ca6-ac0a-541bc9a7403a" width="560" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" frameborder="0"></iframe></p>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">BEEN GETTING TOO CUTE WITH SPIRAL ABYSS THEORYCRAFTING. GONNA JUST SEE IF I CAN BRUTE FORCE IT WITH MY MOST META TEAMS<p style="font-size:14px;color: rgb(64,64,64);">Now Playing: Genshin Impact</div>
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">WENT 0 FOR 3 LAST NIGHT OFF STREAM SO GONNA SEE IF MY LUCK CHANGES ON STREAM<p style="font-size:14px;color: rgb(64,64,64);">Now Playing: League of Legends: Wild Rift</div>
 <p align="center">Game listed may change suddenly depending on my whims.<br><br><br></p>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
