--- a/spiral-abyss/test.html
+++ b/spiral-abyss/test.html
@@ -85,11 +85,11 @@
 	
 	</head>
 <body>
-<p align="center"><iframe title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 9/10)" width="560" height="315" src="https://video.hardlimit.com/videos/embed/c2256b58-b240-407c-9ee2-4e954a811908" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>&nbsp;<iframe title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 11/12)" width="560" height="315" src="https://video.hardlimit.com/videos/embed/57be338c-770e-419f-9a8e-b9899fbe8bb8" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+<p align="center"><iframe title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 9/10)" width="100%" height="315" src="https://video.hardlimit.com/videos/embed/c2256b58-b240-407c-9ee2-4e954a811908" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe>&nbsp;<iframe title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 11/12)" width="100%" height="315" src="https://video.hardlimit.com/videos/embed/57be338c-770e-419f-9a8e-b9899fbe8bb8" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.5 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">Teams:</div>
-<img src="/Team Images/photo.png">
-<img src="/Team Images/photo-2.png">
+<img src="/team_images/photo.png">
+<img src="/team_images/photo-2.png">
 <p>Comments: <br><br><br></p>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
