rows and columns
for video and images

--- a/spiral-abyss/test.html
+++ b/spiral-abyss/test.html
@@ -1,5 +1,17 @@
 <html>
 	<style>
+.column {
+	float: left;
+	width: 50%;
+	padding: 5px;
+}
+
+.row::after {
+	content:	 "";
+	clear: both;
+	display: table;
+}	
+
 .video {
 	aspect-ratio: 16 / 9;
 	max-width: 100%;
@@ -85,11 +97,18 @@
 	
 	</head>
 <body>
-<p align="center"><iframe title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 9/10)" width="560" src="https://video.hardlimit.com/videos/embed/c2256b58-b240-407c-9ee2-4e954a811908" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p><p align="center"><iframe title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 11/12)" width="560" src="https://video.hardlimit.com/videos/embed/57be338c-770e-419f-9a8e-b9899fbe8bb8" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></p>
+<div class="row">
+	<div class="column">
+	<iframe title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 9/10)" width="560" src="https://video.hardlimit.com/videos/embed/c2256b58-b240-407c-9ee2-4e954a811908" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></div>
+	<div class="column"><iframe title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 11/12)" width="560" src="https://video.hardlimit.com/videos/embed/57be338c-770e-419f-9a8e-b9899fbe8bb8" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></div></div>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.5 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">Teams:</div>
-<img src="/team_images/photo.png">
-<img src="/team_images/photo-2.png">
+<div class="row">
+	<div class="column">
+	<img src="team_images/photo.png" width="100%"></div>
+	<div class="column">
+	<img src="team_images/photo-5.png" width="100%"></div>
+<img src="team_images/photo-2.png">
 <p>Comments: <br><br><br></p>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
