added all images

--- a/spiral-abyss/test.html
+++ b/spiral-abyss/test.html
@@ -12,6 +12,12 @@
 	display: table;
 }	
 
+@media screen and (max-width: 500px) {
+	.column {
+		width: 100%;
+	}
+}		
+
 .video {
 	aspect-ratio: 16 / 9;
 	max-width: 100%;
@@ -106,7 +112,20 @@
 	<img src="team_images/photo.png" width="100%"></div>
 	<div class="column">
 	<img src="team_images/photo-5.png" width="100%"></div>
-<img src="team_images/photo-2.png">
+	<div class="column">
+	<img src="team_images/photo-2.png" width="100%"></div>
+	<div class="column">
+	<img src="team_images/photo-6.png" width="100%"></div>
+	<div class="column">
+	<img src="team_images/photo-3.png" width="100%"></div>
+	<div class="column">
+	<img src="team_images/photo-7.png" width="100%"></div>
+	<div class="column">
+	<img src="team_images/photo-4.png" width="100%"></div>
+	<div class="column">
+	<img src="team_images/photo-8.png" width="100%"></div>
+</div>	
+<img src="team_images/photo-9.png">
 <p>Comments: <br><br><br></p>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
