hover image and fix content height

--- a/spiral-abyss/test.html
+++ b/spiral-abyss/test.html
@@ -18,6 +18,19 @@
 	}
 }		
 
+.img:hover {
+	color: #424242;
+	-webkit-transition: all .3s ease-in;
+	-moz-transition: all .3s ease-in;
+	-ms-transition: all .3s ease-in;
+	-o-transition: all .3s ease-in;
+	transition: all .3s ease-in;
+	opacity: 1;
+	transform: scale (1.15);
+	-ms-transform: scale (1.15);
+	-webkit-transform: scale (1.15);
+}	
+
 .video {
 	aspect-ratio: 16 / 9;
 	max-width: 100%;
@@ -79,7 +92,7 @@
 		<title>Spiral Abyss Tracker</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../assets/css/main.css" />
+		<link rel="stylesheet" href="../assets/css/main-spiral.css" />
 <!--/* Link Preview Stuff */-->
 <!-- Primary Meta Tags -->
 <title>Spiral Abyss Tracker</title>
@@ -103,8 +116,8 @@
 	
 	</head>
 <body>
-	<iframe class="video" title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 9/10)" width="560" src="https://video.hardlimit.com/videos/embed/c2256b58-b240-407c-9ee2-4e954a811908" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></div>
-	<iframe class="video" title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 11/12)" width="560" src="https://video.hardlimit.com/videos/embed/57be338c-770e-419f-9a8e-b9899fbe8bb8" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></div></div>
+	<div class="row"><div class="column"><iframe class="video" title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 9/10)" width="100%" src="https://video.hardlimit.com/videos/embed/c2256b58-b240-407c-9ee2-4e954a811908" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></div>
+	<div class="column"><iframe class="video" title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 11/12)" width="100%" src="https://video.hardlimit.com/videos/embed/57be338c-770e-419f-9a8e-b9899fbe8bb8" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></div></div>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.5 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">Teams:</div>
 <div class="row">
