--- a/spiral-abyss/test.html
+++ b/spiral-abyss/test.html
@@ -18,18 +18,22 @@
 	}
 }		
 
-.img:hover {
-	color: #424242;
-	-webkit-transition: all .3s ease-in;
-	-moz-transition: all .3s ease-in;
-	-ms-transition: all .3s ease-in;
-	-o-transition: all .3s ease-in;
-	transition: all .3s ease-in;
-	opacity: 1;
-	transform: scale (1.15);
-	-ms-transform: scale (1.15);
-	-webkit-transform: scale (1.15);
+img {
+	transition:transform 0.25s ease;
 }	
+
+.img:hover{
+    color: #424242; 
+  -webkit-transition: all .3s ease-in;
+  -moz-transition: all .3s ease-in;
+  -ms-transition: all .3s ease-in;
+  -o-transition: all .3s ease-in;
+  transition: all .3s ease-in;
+  opacity: 1;
+  transform: scale(1.15);
+  -ms-transform: scale(1.15); /* IE 9 */
+  -webkit-transform: scale(1.15); /* Safari and Chrome */
+}
 
 .video {
 	aspect-ratio: 16 / 9;
