image alignment issues

--- a/spiral-abyss/test.html
+++ b/spiral-abyss/test.html
@@ -12,7 +12,7 @@
 	display: table;
 }	
 
-@media screen and (max-width: 500px) {
+@media screen and (max-width: 1000px) {
 	.column {
 		width: 100%;
 	}
@@ -23,16 +23,8 @@ img {
 }	
 
 .img:hover{
-    color: #424242; 
-  -webkit-transition: all .3s ease-in;
-  -moz-transition: all .3s ease-in;
-  -ms-transition: all .3s ease-in;
-  -o-transition: all .3s ease-in;
-  transition: all .3s ease-in;
-  opacity: 1;
-  transform: scale(1.15);
-  -ms-transform: scale(1.15); /* IE 9 */
-  -webkit-transform: scale(1.15); /* Safari and Chrome */
+  -webkit-transform:scale(1.5);
+  transform:scale(1.5);
 }
 
 .video {
@@ -126,21 +118,17 @@ img {
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.5 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);">Teams:</div>
 <div class="row">
 	<div class="column">
-	<img src="team_images/photo.png" width="100%"></div>
-	<div class="column">
-	<img src="team_images/photo-5.png" width="100%"></div>
-	<div class="column">
-	<img src="team_images/photo-2.png" width="100%"></div>
-	<div class="column">
-	<img src="team_images/photo-6.png" width="100%"></div>
-	<div class="column">
-	<img src="team_images/photo-3.png" width="100%"></div>
-	<div class="column">
-	<img src="team_images/photo-7.png" width="100%"></div>
-	<div class="column">
-	<img src="team_images/photo-4.png" width="100%"></div>
-	<div class="column">
+	<h3 align="center">Team 1</h3>
+	<img src="team_images/photo-5.png" width="100%">
+	<img src="team_images/photo-6.png" width="100%">
+	<img src="team_images/photo-7.png" width="100%">
 	<img src="team_images/photo-8.png" width="100%"></div>
+	<div class="column">
+	<h3 align="center">Team 2</h3>
+	<img src="team_images/photo.png" width="100%">
+	<img src="team_images/photo-2.png" width="100%">
+	<img src="team_images/photo-3.png" width="100%">
+	<img src="team_images/photo-4.png" width="100%"></div>
 </div>	
 <img src="team_images/photo-9.png">
 <p>Comments: <br><br><br></p>
