--- a/spiral-abyss/test.html
+++ b/spiral-abyss/test.html
@@ -74,7 +74,7 @@ box-sizing: border-box;
 background: white;
 color: black;
 text-decoration: none;
-position: absolute;
+position: relative;
 top: -80px;
 right: 0;
 -webkit-transition: .5s ease-in-out;
@@ -236,19 +236,28 @@ img {
 <div class="row">
 	<div class="column">
 	<h3 align="center">Team 1</h3>
-	<a class="lightbox" href="#"><img src="team_images/photo-5.png" width="100%"></a>
-	<img src="team_images/photo-6.png" width="100%">
-	<img src="team_images/photo-7.png" width="100%">
-	<img src="team_images/photo-8.png" width="100%"></div>
+	<a class="lightbox" href="#photo-5"><img src="team_images/photo-5.png" width="100%"></a>
+	<a class="lightbox" href="#photo-6"><img src="team_images/photo-6.png" width="100%"></a>
+	<a class="lightbox" href="#photo-7"><img src="team_images/photo-7.png" width="100%"></a>
+	<a class="lightbox" href="#photo-8"><img src="team_images/photo-8.png" width="100%"></a></div>
 	<div class="column">
 	<h3 align="center">Team 2</h3>
-	<img src="team_images/photo.png" width="100%">
-	<img src="team_images/photo-2.png" width="100%">
-	<img src="team_images/photo-3.png" width="100%">
-	<img src="team_images/photo-4.png" width="100%"></div>
+	<a class="lightbox" href="#photo"><img src="team_images/photo.png" width="100%"></a>
+	<a class="lightbox" href="#photo-2"><img src="team_images/photo-2.png" width="100%"></a>
+	<a class="lightbox" href="#photo-3"><img src="team_images/photo-3.png" width="100%"></a>
+	<a class="lightbox" href="#photo-4"><img src="team_images/photo-4.png" width="100%"></a></div>
 </div>	
 <img src="team_images/photo-9.png">
 <p>Comments: <br><br><br></p>
+
+<div class="lightbox-target" id="photo"><img src="team_images/photo.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-2"><img src="team_images/photo-2.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-3"><img src="team_images/photo-3.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-4"><img src="team_images/photo-4.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-5"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-6"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-7"><img src="team_images/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-8"><img src="team_images/photo-8.png" width="75%"><a class="lightbox-close" href></a></div>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
 				<ul class="icons">
