--- a/spiral-abyss/test.html
+++ b/spiral-abyss/test.html
@@ -248,7 +248,7 @@ img {
 	<a class="lightbox" href="#photo-4"><img src="team_images/photo-4.png" width="100%"></a></div>
 </div>	
 <img src="team_images/photo-9.png">
-<p>Comments: <br><br><br></p>
+<p><br><br>Comments: <br><br>This is a test of what a Spiral Abyss tracker for my personal use could look like.<br><br><br></p>
 
 <div class="lightbox-target" id="photo"><img src="team_images/photo.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-2"><img src="team_images/photo-2.png" width="75%"><a class="lightbox-close" href></a></div>
