--- a/spiral-abyss/index.html
+++ b/spiral-abyss/index.html
@@ -214,23 +214,23 @@ img {
 
 <!-- Open Graph / Facebook -->
 <meta property="og:type" content="website">
-<meta property="og:url" content="https://smallscreen.info/live">
+<meta property="og:url" content="https://smallscreen.info/spiral-abyss">
 <meta property="og:title" content="Spiral Abyss Tracker">
 <meta property="og:description" content="Check Out Stats and Video">
 <!-- meta property="og:image" content="assets/images/sstv.png" -->
 
 <!-- Twitter -->
 <meta property="twitter:card" content="summary_large_image">
-<meta property="twitter:url" content="https://smallscreen.info/live">
-<meta property="twitter:title" content="Small Screen TV">
-<meta property="twitter:description" content="Watch Now">
-<meta property="twitter:image" content="assets/images/sstv.png">
+<meta property="twitter:url" content="https://smallscreen.info/spiral-abyss">
+<meta property="twitter:title" content="Spiral Abyss Tracker">
+<meta property="twitter:description" content="Check Out Stats and Video">
+<meta property="twitter:image" content="assets/images/spiral.png">
 	
 	
 	</head>
 <body>
-	<div class="row"><div class="column"><iframe class="video" title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 9/10)" width="100%" src="https://video.hardlimit.com/videos/embed/c2256b58-b240-407c-9ee2-4e954a811908" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></div>
-	<div class="column"><iframe class="video" title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 11/12)" width="100%" src="https://video.hardlimit.com/videos/embed/57be338c-770e-419f-9a8e-b9899fbe8bb8" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe></div></div>
+	<div class="row"><div class="column"><iframe class="video" title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 9/10)" width="100%" src="https://video.hardlimit.com/videos/embed/c2256b58-b240-407c-9ee2-4e954a811908" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floors 9-10</h4></div>
+	<div class="column"><iframe class="video" title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 11/12)" width="100%" src="https://video.hardlimit.com/videos/embed/57be338c-770e-419f-9a8e-b9899fbe8bb8" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floors 11-12</h4></div></div>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.5 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);"><h3>Teams:</h3></div>
 <div class="row">
