Spiral Abyss Update 3.6

--- a/spiral-abyss/index.html
+++ b/spiral-abyss/index.html
@@ -229,35 +229,34 @@ img {
 	
 	</head>
 <body>
-	<div class="row"><div class="column"><iframe class="video" title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 9/10)" width="100%" src="https://video.hardlimit.com/videos/embed/c2256b58-b240-407c-9ee2-4e954a811908" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floors 9-10</h4></div>
-	<div class="column"><iframe class="video" title="Genshin Impact - Spiral Abyss 3.5, Cycle 1 - Alhaitham Double Dendro/Hu Tao Double Hydro Full Clear (Floors 11/12)" width="100%" src="https://video.hardlimit.com/videos/embed/57be338c-770e-419f-9a8e-b9899fbe8bb8" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floors 11-12</h4></div></div>
+	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/ebe2eee4-a963-4bc9-954b-35700066f42a" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.5 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);"><h3>Teams:</h3></div>
 <div class="row">
 	<div class="column">
 	<h3 align="center">Team 1</h3>
-	<a class="lightbox" href="#photo-5"><img src="team_images/photo-5.png" width="100%"></a>
-	<a class="lightbox" href="#photo-6"><img src="team_images/photo-6.png" width="100%"></a>
-	<a class="lightbox" href="#photo-7"><img src="team_images/photo-7.png" width="100%"></a>
-	<a class="lightbox" href="#photo-8"><img src="team_images/photo-8.png" width="100%"></a></div>
+	<a class="lightbox" href="#photo-5"><img src="team_images/04-17-23/photo.png" width="100%"></a>
+	<a class="lightbox" href="#photo-6"><img src="team_images/04-17-23/photo-2.png" width="100%"></a>
+	<a class="lightbox" href="#photo-7"><img src="team_images/04-17-23/photo-3.png" width="100%"></a>
+	<a class="lightbox" href="#photo-8"><img src="team_images/04-17-23/photo-4.png" width="100%"></a></div>
 	<div class="column">
 	<h3 align="center">Team 2</h3>
-	<a class="lightbox" href="#photo"><img src="team_images/photo.png" width="100%"></a>
-	<a class="lightbox" href="#photo-2"><img src="team_images/photo-2.png" width="100%"></a>
-	<a class="lightbox" href="#photo-3"><img src="team_images/photo-3.png" width="100%"></a>
-	<a class="lightbox" href="#photo-4"><img src="team_images/photo-4.png" width="100%"></a></div>
+	<a class="lightbox" href="#photo"><img src="team_images/04-17-23/photo-5.png" width="100%"></a>
+	<a class="lightbox" href="#photo-2"><img src="team_images/04-17-23/photo-6.png" width="100%"></a>
+	<a class="lightbox" href="#photo-3"><img src="team_images/04-17-23/photo-7.png" width="100%"></a>
+	<a class="lightbox" href="#photo-4"><img src="team_images/04-17-23/photo-8.png" width="100%"></a></div>
 </div>	
-<img src="team_images/photo-9.png">
-<p><br><br>Comments: <br><br>This is a test of what a Spiral Abyss tracker for my personal use could look like.<br><br><br></p>
+<img src="team_images/04-17-23/photo-9.png">
+<p><br><br>Comments: <br><br>Skipped last cycle despite eventually passing it because the Wenut was so frustrating. It was not enjoyable to do or watch, and it also would've required some more editing since I couldn't clear it with just two teams. Anyway, this cycle was a return to a better place, though it was also pretty dang hard. The last cycle had me convinced Hu Tao could brute force anything so a lot of early attempts had me struggling to group enemies well enough to do any amount of AoE damage. Because it didn't seem to be holding up its end of the bargain (where Alhaitham Hyperbloom absolutely was), I went back to my first (and still probably favorite) 5-star Childe and used his international team to wipe the floor with enemies (provided they didn't one-shot me first.<br><br><br></p>
 
-<div class="lightbox-target" id="photo"><img src="team_images/photo.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-2"><img src="team_images/photo-2.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-3"><img src="team_images/photo-3.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-4"><img src="team_images/photo-4.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-5"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-6"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-7"><img src="team_images/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-8"><img src="team_images/photo-8.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo"><img src="team_images/04-17-23/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-2"><img src="team_images/04-17-23/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-3"><img src="team_images/04-17-23/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-4"><img src="team_images/04-17-23/photo-8.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-5"><img src="team_images/04-17-23/photo.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-6"><img src="team_images/04-17-23/photo-2.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-7"><img src="team_images/04-17-23/photo-3.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-8"><img src="team_images/04-17-23/photo-4.png" width="75%"><a class="lightbox-close" href></a></div>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
 				<ul class="icons">
