Stream Box Status a

--- a/live.html
+++ b/live.html
@@ -87,7 +87,7 @@
 <body>
 <p align="center"><iframe class="video" title="Mobile Games Streaming" src="https://video.hardlimit.com/videos/embed/ab69b48f-6f94-4ca6-ac0a-541bc9a7403a" width="560" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups" frameborder="0"></iframe></p>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">WITH THE WENUT OUT OF THE ABYSS I'M BRIMMING WITH CONFIDENCE HEADING INTO THIS CYCLE. HOPING ALHAITHAM HYPERBLOOM AND HU TAO VV VAPE CAN CARRY ME THROUGH THE WHOLE WAY<p style="font-size:14px;color: rgb(64,64,64);">Now Playing: Genshin Impact</div>
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">THE ANNOUNCEMENT OF NEW DYSMANTLE DLC HAS ME ZOMBIE HUNTING AND CRAFTING ALL OVER AGAIN<p style="font-size:14px;color: rgb(64,64,64);">Now Playing: Dysmantle</div>
 <p align="center">Game listed may change suddenly depending on my whims.<br><br><br></p>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
