--- a/spiral-abyss/team_images/3-5-23/index.html
+++ b/spiral-abyss/team_images/3-5-23/index.html
@@ -229,7 +229,7 @@ img {
 	
 	</head>
 <body>
-	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/f27df425-2f80-4fcf-8ff7-691065588393" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
+	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/ebe2eee4-a963-4bc9-954b-35700066f42a" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.6 CYCLE 1<p style="font-size:14px;color: rgb(64,64,64);"><h3>Teams:</h3></div>
 <div class="row">
@@ -247,7 +247,7 @@ img {
 	<a class="lightbox" href="#photo-4"><img src="team_images/04-17-23/photo-8.png" width="100%"></a></div>
 </div>	
 <img src="team_images/04-17-23/photo-9.png">
-<p><br><br>Comments: <br><br>Got some two new characters and got to try them both out! Baizhu is probably better than most people say. He's not Nahida but no one is. As someone who has literally every dendro character except Nahida I can say he feels very good and fills his role very well (and he's not even fully built!). I am glad for it because I don't want Nahida. Nilou is very good but also very weird. Plays unlike anyone and produces resuts unlike anyone else as well. It makes you play differently and takes a lot of getting used to, though. I'm glad for it, but it meant quite a few retries.<br><br><br></p>
+<p><br><br>Comments: <br><br>Skipped last cycle despite eventually passing it because the Wenut was so frustrating. It was not enjoyable to do or watch, and it also would've required some more editing since I couldn't clear it with just two teams. Anyway, this cycle was a return to a better place, though it was also pretty dang hard. The last cycle had me convinced Hu Tao could brute force anything so a lot of early attempts had me struggling to group enemies well enough to do any amount of AoE damage. Because it didn't seem to be holding up its end of the bargain (where Alhaitham Hyperbloom absolutely was), I went back to my first (and still probably favorite) 5-star Childe and used his international team to wipe the floor with enemies (provided they didn't one-shot me first).<br><br><br></p>
 
 <div class="lightbox-target" id="photo"><img src="team_images/04-17-23/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-2"><img src="team_images/04-17-23/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
