updated photos and video for spiral

--- a/spiral-abyss/index.html
+++ b/spiral-abyss/index.html
@@ -235,28 +235,28 @@ img {
 <div class="row">
 	<div class="column">
 	<h3 align="center">Team 1</h3>
-	<a class="lightbox" href="#photo-5"><img src="team_images/04-17-23/photo.png" width="100%"></a>
-	<a class="lightbox" href="#photo-6"><img src="team_images/04-17-23/photo-2.png" width="100%"></a>
-	<a class="lightbox" href="#photo-7"><img src="team_images/04-17-23/photo-3.png" width="100%"></a>
-	<a class="lightbox" href="#photo-8"><img src="team_images/04-17-23/photo-4.png" width="100%"></a></div>
+	<a class="lightbox" href="#photo-5"><img src="team_images/photo.png" width="100%"></a>
+	<a class="lightbox" href="#photo-6"><img src="team_images/photo-2.png" width="100%"></a>
+	<a class="lightbox" href="#photo-7"><img src="team_images/photo-3.png" width="100%"></a>
+	<a class="lightbox" href="#photo-8"><img src="team_images/photo-4.png" width="100%"></a></div>
 	<div class="column">
 	<h3 align="center">Team 2</h3>
-	<a class="lightbox" href="#photo"><img src="team_images/04-17-23/photo-5.png" width="100%"></a>
-	<a class="lightbox" href="#photo-2"><img src="team_images/04-17-23/photo-6.png" width="100%"></a>
-	<a class="lightbox" href="#photo-3"><img src="team_images/04-17-23/photo-7.png" width="100%"></a>
-	<a class="lightbox" href="#photo-4"><img src="team_images/04-17-23/photo-8.png" width="100%"></a></div>
+	<a class="lightbox" href="#photo"><img src="team_images/photo-5.png" width="100%"></a>
+	<a class="lightbox" href="#photo-2"><img src="team_images/photo-6.png" width="100%"></a>
+	<a class="lightbox" href="#photo-3"><img src="team_images/photo-7.png" width="100%"></a>
+	<a class="lightbox" href="#photo-4"><img src="team_images/photo-8.png" width="100%"></a></div>
 </div>	
-<img src="team_images/04-17-23/photo-9.png">
+<img src="team_images/photo-9.png">
 <p><br><br>Comments: <br><br>Got some two new characters and got to try them both out! Baizhu is probably better than most people say. He's not Nahida but no one is. As someone who has literally every dendro character except Nahida I can say he feels very good and fills his role very well (and he's not even fully built!). I am glad for it because I don't want Nahida. Nilou is very good but also very weird. Plays unlike anyone and produces resuts unlike anyone else as well. It makes you play differently and takes a lot of getting used to, though. I'm glad for it, but it meant quite a few retries.<br><br><br></p>
 
-<div class="lightbox-target" id="photo"><img src="team_images/04-17-23/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-2"><img src="team_images/04-17-23/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-3"><img src="team_images/04-17-23/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-4"><img src="team_images/04-17-23/photo-8.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-5"><img src="team_images/04-17-23/photo.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-6"><img src="team_images/04-17-23/photo-2.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-7"><img src="team_images/04-17-23/photo-3.png" width="75%"><a class="lightbox-close" href></a></div>
-<div class="lightbox-target" id="photo-8"><img src="team_images/04-17-23/photo-4.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-2"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-3"><img src="team_images/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-4"><img src="team_images/photo-8.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-5"><img src="team_images/photo.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-6"><img src="team_images/photo-2.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-7"><img src="team_images/photo-3.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-8"><img src="team_images/photo-4.png" width="75%"><a class="lightbox-close" href></a></div>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
 				<ul class="icons">
