--- a/spiral-abyss/team_images/05-17-23/index.html
+++ b/spiral-abyss/team_images/05-17-23/index.html
@@ -205,7 +205,7 @@ img {
 		<title>Spiral Abyss Tracker</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-		<link rel="stylesheet" href="../assets/css/main-spiral.css" />
+		<link rel="stylesheet" href=".../assets/css/main-spiral.css" />
 <!--/* Link Preview Stuff */-->
 <!-- Primary Meta Tags -->
 <title>Spiral Abyss Tracker</title>
@@ -229,25 +229,25 @@ img {
 	
 	</head>
 <body>
-	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/47c85c6c-4626-4521-b358-285b5834d93a" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12 (Chamber 1 & 3 Only)</h4>
+	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/f27df425-2f80-4fcf-8ff7-691065588393" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.6 CYCLE 3<p style="font-size:14px;color: rgb(64,64,64);"><h3>Teams:</h3></div>
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.6 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);"><h3>Teams:</h3></div>
 <div class="row">
 	<div class="column">
 	<h3 align="center">Team 1</h3>
-	<a class="lightbox" href="#photo-5"><img src="team_images/photo.png" width="100%"></a>
-	<a class="lightbox" href="#photo-6"><img src="team_images/photo-2.png" width="100%"></a>
-	<a class="lightbox" href="#photo-7"><img src="team_images/photo-3.png" width="100%"></a>
-	<a class="lightbox" href="#photo-8"><img src="team_images/photo-4.png" width="100%"></a></div>
+	<a class="lightbox" href="#photo-5"><img src="team_images/5-17-23/photo.png" width="100%"></a>
+	<a class="lightbox" href="#photo-6"><img src="team_images/5-17-23/photo-2.png" width="100%"></a>
+	<a class="lightbox" href="#photo-7"><img src="team_images/5-17-23/photo-3.png" width="100%"></a>
+	<a class="lightbox" href="#photo-8"><img src="team_images/5-17-23/photo-4.png" width="100%"></a></div>
 	<div class="column">
 	<h3 align="center">Team 2</h3>
-	<a class="lightbox" href="#photo"><img src="team_images/photo-5.png" width="100%"></a>
-	<a class="lightbox" href="#photo-2"><img src="team_images/photo-6.png" width="100%"></a>
-	<a class="lightbox" href="#photo-3"><img src="team_images/photo-7.png" width="100%"></a>
-	<a class="lightbox" href="#photo-4"><img src="team_images/photo-8.png" width="100%"></a></div>
+	<a class="lightbox" href="#photo"><img src="team_images/5-17-23/photo-5.png" width="100%"></a>
+	<a class="lightbox" href="#photo-2"><img src="team_images/5-17-23/photo-6.png" width="100%"></a>
+	<a class="lightbox" href="#photo-3"><img src="team_images/5-17-23/photo-7.png" width="100%"></a>
+	<a class="lightbox" href="#photo-4"><img src="team_images/5-17-23/photo-8.png" width="100%"></a></div>
 </div>	
-<img src="team_images/photo-9.png">
-<p><br><br>Comments: <br><br>Used basically the same teams built up a little better from the last cycle, but somehow I found this go-around a lot harder. Oh well, it's done. Also, I don't know why I didn't get footage of Floor 12 Chamber 2 but that was also the easiest one of this cycle so less likely I'll need to go back to see how I did it.<br><br><br></p>
+<img src="team_images/5-17-23/photo-9.png">
+<p><br><br>Comments: <br><br>Got some two new characters and got to try them both out! Baizhu is probably better than most people say. He's not Nahida but no one is. As someone who has literally every dendro character except Nahida I can say he feels very good and fills his role very well (and he's not even fully built!). I am glad for it because I don't want Nahida. Nilou is very good but also very weird. Plays unlike anyone and produces resuts unlike anyone else as well. It makes you play differently and takes a lot of getting used to, though. I'm glad for it, but it meant quite a few retries.<br><br><br></p>
 
 <div class="lightbox-target" id="photo"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
 <div class="lightbox-target" id="photo-2"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
