--- a/spiral-abyss/team_images/06-22-23/index.html
+++ b/spiral-abyss/team_images/06-22-23/index.html
@@ -229,11 +229,34 @@ img {
 	
 	</head>
 <body>
-	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/4b5c1f96-c7b2-473c-a81d-392a613b0a69" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
+	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/47c85c6c-4626-4521-b358-285b5834d93a" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12 (Chamber 1 & 3 Only)</h4>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
-<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.7 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
-<p><br><br>Comments: <br><br>God this cycle sucks. It's the first time in a long time I have had to use different teams, and perhaps the only time I have needed to use six unique teams to clear three floors. Certain parts of the encounters are interesting like the baptist on 12-3 and theoretically the shieldbreaking needs for 12-1, but so much of this is also attached to crummy wave spawning and enemies that move around way too much. This results in fights where you basically just have to get lucky with how enemies group themselves. You don't even need to play optimally (as you can see in the 12-3 chamber 1 fight). It doesn't feel good! I'd rather fight the Wenut than do this.<br><br><br></p>
+<div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.6 CYCLE 3<p style="font-size:14px;color: rgb(64,64,64);"><h3>Teams:</h3></div>
+<div class="row">
+	<div class="column">
+	<h3 align="center">Team 1</h3>
+	<a class="lightbox" href="#photo-5"><img src="team_images/photo.png" width="100%"></a>
+	<a class="lightbox" href="#photo-6"><img src="team_images/photo-2.png" width="100%"></a>
+	<a class="lightbox" href="#photo-7"><img src="team_images/photo-3.png" width="100%"></a>
+	<a class="lightbox" href="#photo-8"><img src="team_images/photo-4.png" width="100%"></a></div>
+	<div class="column">
+	<h3 align="center">Team 2</h3>
+	<a class="lightbox" href="#photo"><img src="team_images/photo-5.png" width="100%"></a>
+	<a class="lightbox" href="#photo-2"><img src="team_images/photo-6.png" width="100%"></a>
+	<a class="lightbox" href="#photo-3"><img src="team_images/photo-7.png" width="100%"></a>
+	<a class="lightbox" href="#photo-4"><img src="team_images/photo-8.png" width="100%"></a></div>
+</div>	
+<img src="team_images/photo-9.png">
+<p><br><br>Comments: <br><br>Used basically the same teams built up a little better from the last cycle, but somehow I found this go-around a lot harder. Oh well, it's done. Also, I don't know why I didn't get footage of Floor 12 Chamber 2 but that was also the easiest one of this cycle so less likely I'll need to go back to see how I did it.<br><br><br></p>
 
+<div class="lightbox-target" id="photo"><img src="team_images/photo-5.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-2"><img src="team_images/photo-6.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-3"><img src="team_images/photo-7.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-4"><img src="team_images/photo-8.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-5"><img src="team_images/photo.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-6"><img src="team_images/photo-2.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-7"><img src="team_images/photo-3.png" width="75%"><a class="lightbox-close" href></a></div>
+<div class="lightbox-target" id="photo-8"><img src="team_images/photo-4.png" width="75%"><a class="lightbox-close" href></a></div>
 <!-- Footer -->
 			<footer id="footer" style="position:relative;">
 				<ul class="icons">
