Moved pictures and added overview photo to abyss

--- a/spiral-abyss/index.html
+++ b/spiral-abyss/index.html
@@ -232,6 +232,7 @@ img {
 	<iframe class="video" width="100%" src="https://video.hardlimit.com/videos/embed/4b5c1f96-c7b2-473c-a81d-392a613b0a69" frameborder="0" allowfullscreen="" sandbox="allow-same-origin allow-scripts allow-popups"></iframe><h4 align="center">Floor 12</h4>
 <p align="center"><a href="https://video.hardlimit.com/c/namestolen/videos">View Archives</a> | <a href="https://elekk.xyz/@campbell">Follow me</a>
 <div class="fade in" align="center" style="font-family: 'VT323', monospace;font-size: 30px;color: rgb(64,64,64);">SPIRAL ABYSS VER. 3.7 CYCLE 2<p style="font-size:14px;color: rgb(64,64,64);">
+<img width="100%" src="team_images/photo-9.png">
 <p><br><br>Comments: <br><br>God this cycle sucks. It's the first time in a long time I have had to use different teams, and perhaps the only time I have needed to use six unique teams to clear three floors. Certain parts of the encounters are interesting like the baptist on 12-3 and theoretically the shieldbreaking needs for 12-1, but so much of this is also attached to crummy wave spawning and enemies that move around way too much. This results in fights where you basically just have to get lucky with how enemies group themselves. You don't even need to play optimally (as you can see in the 12-3 chamber 1 fight). It doesn't feel good! I'd rather fight the Wenut than do this.<br><br><br></p>
 
 <!-- Footer -->
